--- a/index.html
+++ b/index.html
@@ -118,7 +118,18 @@
         </p>
       </div>
     </section>
-    <div class="story-photos">story-photos</div>
+    <div class="story__pictures">
+      <img
+        src="img/story-1.jpeg"
+        alt="Couple with new house"
+        class="story__img story__img--1"
+      />
+      <img
+        src="img/story-2.jpeg"
+        alt="New house"
+        class="story__img story__img--2"
+      />
+    </div>
     <div class="story-text">story-text</div>
     <section class="section-homes">homes</section>
     <section class="section-gallery">gallery</section>
